update of index.html on 12Dec2019

--- a/index.html
+++ b/index.html
@@ -9,16 +9,16 @@
 this is the 786education project which had been  created by me on github
 </title>
 
-<link href="css/bootstrap.min.css" rel="stylesheet">
-<link href="css/font-awesome.min.css" rel="stylesheet">
-<link href="css/animate.min.css" rel="stylesheet">
-<link href="css/prettyPhoto.css" rel="stylesheet">
-<link href="css/main.css" rel="stylesheet">
-<link href="css/readmore.css" rel="stylesheet">
-<link href="css/responsive.css" rel="stylesheet">
+<link href="bootstrap.min.css" rel="stylesheet">
+<link href="font-awesome.min.css" rel="stylesheet">
+<link href="animate.min.css" rel="stylesheet">
+<link href="prettyPhoto.css" rel="stylesheet">
+<link href="main.css" rel="stylesheet">
+<link href="readmore.css" rel="stylesheet">
+<link href="responsive.css" rel="stylesheet">
 <!--[if lt IE 9]>
-<script src="js/html5shiv.js"></script>
-<script src="js/respond.min.js"></script>
+<script src="html5shiv.js"></script>
+<script src="respond.min.js"></script>
 <![endif]-->
 <link rel="shortcut icon" href="images/ico/favicon.ico">
 <link rel="apple-touch-icon-precomposed" sizes="144x144" href="images/ico/apple-touch-icon-144-precomposed.png">
@@ -26,7 +26,7 @@ this is the 786education project which had been  created by me on github
 <link rel="apple-touch-icon-precomposed" sizes="72x72" href="images/ico/apple-touch-icon-72-precomposed.png">
 <link rel="apple-touch-icon-precomposed" href="images/ico/apple-touch-icon-57-precomposed.png">
 
-<script type="text/javascript" src="js/mainframe.js"></script>
+<script type="text/javascript" src="mainframe.js"></script>
 </head>
 <body>
 <h2>This is my project for 786.education</h2>
@@ -47,21 +47,21 @@ this is the 786education project which had been  created by me on github
 </div>
 </div>
 </footer>
-<script src="js/jquery.js"></script>
-<script src="js/bootstrap.min.js"></script>
-<script src="js/jquery.prettyPhoto.js"></script>
-<script src="js/jquery.isotope.min.js"></script>
-<script src="js/main.js"></script>
-<script src="js/wow.min.js"></script>
+<script src="jquery.js"></script>
+<script src="bootstrap.min.js"></script>
+<script src="jquery.prettyPhoto.js"></script>
+<script src="jquery.isotope.min.js"></script>
+<script src="main.js"></script>
+<script src="wow.min.js"></script>
 </body>
-<script src="js/jquery-3.1.1.js"></script>
+<script src="jquery-3.1.1.js"></script>
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/js/bootstrap.min.js"></script>
 
 <script src= 'https://cdn.rawgit.com/admsev/jquery-play-sound/master/jquery.playSound.js'>     </script> 
-<script type="text/javascript" src="js/code.js"></script>
+<script type="text/javascript" src="code.js"></script>
 
-<script src="dist/clipboard.min.js"></script>
-<script src="dist/copier.js"></script>
-<script type="text/javascript" src="js/seemore.js"></script>
-<script type="text/javascript" src="js/voiceinput.js"></script>
+<script src="clipboard.min.js"></script>
+<script src="copier.js"></script>
+<script type="text/javascript" src="seemore.js"></script>
+<script type="text/javascript" src="voiceinput.js"></script>
 </html>
